-tweaked keyboard shortcuts, mainly in the add and edit cards dialogs
 (suggested by Murray James Morrison)
-changed filter API to run(self, text, card, fact_key, **render_args)
-bring back 'increase size of non-latin characters' in the card
 appearance dialog
-renamed 'next' to 'next sister card' in preview dialog
-fixed edit card dialog called from card browser that would sometimes
 refuse to close (reported by Roel De Conick)


MNEMOSYNE 2.0

Almost three years in the making, this is essentially a complete rewrite of 
the old 1.x codebase, with a new, clean design, consisting of components that
can be swapped in and out very easily, which allows plugin writers maximum 
flexibility.

Major user-visible changes:
	
-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a 
 card can have multiple tags. Tags can also be organised in a hierachy, with
 '::' separating the levels of the hierachy.
-Powerful new card browser, giving much more information and flexibility to
 organise your cards.
-'Activate cards' is completely revamped and is much more flexible. Also, sets
 of active cards can be now be saved for easier access later.
-Graphical statistics, easily extensible through plugins (first
 implementation by Mike Appleby).
-Each individual field in a card can now have its own font, colour, ... which
 can be set through the GUI. No more need for hacks like 'increase size of 
 non-latin characters'. Background colour is also configurable per card type.
-The widget that displays the cards is now a full webbrowser, with e.g. 
 support for Javascript, animated gifs, ... .
-Added cramming scheduler plugin, which goes through your cards in random
 order and does not affect the normal scheduler data. It is visually