@@ -1,24 +1,16 @@
--both alt and control in add and edit card window
--In the Edit card window: if I click the Alt key, the O of OK, the P of Preview and X of Exit all appear underlined. Alt/P previews the card and Alt/X exits the card window. Alt/O does nothing.
- 
--delete card action: both delete and backspace should work
--all grades function as show answer
-
--Tip dlg line 63, in update_dialog IndexError: list index out of range (reported by B_Monkey)
-
--convert own databases, also on windows
+-code johannes 
 
 -rescale window only when answer picture is shown
 
 -merge card appearance with settings
 
+-all grades function as show answer
 -pgdwn in preview/edit in card browser
+-have page up/up/page down/down keys work to scroll in q and a widgets
 
 -'importing history' text does not show?
 
 -no icon on W7
-
--have page up/up/page down/down keys work to scroll in q and a widgets
 
 -comma to separate tag names
 -:: to separate hierarchies
@@ -45,6 +37,9 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 
 -more elaborate plugin description in bottom pane
 
+-make sure all strings are translatable
+ http://stackoverflow.com/questions/1114792/how-to-initialize-a-static-char-with-gettetxt-using-local-operating-system-env
+
 -new cards with a >=2 grade can end up on the same day on first interactive rep
  replace set_initial_grade by set_initial_grades(cards)?
 -also make sure this is OK when changing card type creates extra cards
@@ -55,8 +50,6 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
  restarting brings bw cards.
 
 -configure dialog is slow on Windows due to server detect
-
--remove upgrade_beta_6.py
 
 -also give warning on the client side if a sync failed and a backup needs to happen
 -server down should not result in sync conflict
@@ -84,10 +77,11 @@ http://stackoverflow.com/questions/2545577/qsplitter-becoming-undistinguishable-
 
 -card type clone: rename and delete, both in card browser and card type browser
 
+-remove upgrade_beta_6.py
+
 -upgrade to qt 4.7.4, retest progress bars
 -make distrib under linux
 -bundle webserver with install
-
 
 -test upgrade on OSX: remove library/Mnemosyne2, make sure you have 1.x in library/Mnemosyne.
  after upgrade there should be 2.0 files in library/Mnemosyne and a backup in library/Mnemosyne_1
